--- a/public/css/style.css
+++ b/public/css/style.css
@@ -704,6 +704,10 @@ video {
   height: 100vh;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
 .w-1\/3{
   width: 33.333333%;
 }
@@ -979,11 +983,28 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:h-full{
+    height: 100%;
+  }
+
+  .md\:h-screen{
+    height: 100vh;
+  }
+
   .md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
   .md\:p-2{
     padding: 0.5rem;
+  }
+
+  .md\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 }
